[gd_scene load_steps=7 format=3 uid="uid://btrke7rn4blxm"]

[ext_resource type="Script" path="res://assets/scripts/items/weapon.gd" id="1_7dyo7"]
[ext_resource type="Texture2D" uid="uid://cqyuvlxinqtqc" path="res://assets/sprites/dungeon/weapons_.png" id="1_hhwgu"]
[ext_resource type="Script" path="res://assets/scripts/player/magic_attack.gd" id="2_j7ahm"]
[ext_resource type="Resource" uid="uid://chw5576wg47v4" path="res://assets/data/conflagrate.tres" id="3_i3gh3"]
[ext_resource type="AudioStream" uid="uid://ck2wkfdfp2hij" path="res://assets/audio/Explosion.wav" id="4_rcbxt"]
[ext_resource type="Texture2D" uid="uid://cdk267i0i80jy" path="res://assets/sprites/dungeon/fire_.png" id="5_ew75c"]

[node name="StaffOfFire" type="Node2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_7dyo7")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_as_relative = false
texture = ExtResource("1_hhwgu")
region_enabled = true
region_rect = Rect2(2, 72, 8, 24)

[node name="Abilities" type="Node" parent="."]

[node name="MagicAttack" type="Node" parent="Abilities"]
script = ExtResource("2_j7ahm")
spell_data = ExtResource("3_i3gh3")

[node name="CooldownTimer" type="Timer" parent="Abilities/MagicAttack"]

[node name="CastTimer" type="Timer" parent="Abilities/MagicAttack"]

[node name="PlayerSpellSound" type="AudioStreamPlayer" parent="Abilities/MagicAttack"]
stream = ExtResource("4_rcbxt")
volume_db = -15.0

[node name="MagicAttackIndicator" type="Sprite2D" parent="Abilities/MagicAttack"]
self_modulate = Color(1, 1, 1, 0.196078)
texture = ExtResource("5_ew75c")
region_enabled = true
region_rect = Rect2(20, 19, 8, 9)

[connection signal="timeout" from="Abilities/MagicAttack/CooldownTimer" to="Abilities/MagicAttack" method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="Abilities/MagicAttack/CastTimer" to="Abilities/MagicAttack" method="_on_cast_timer_timeout"]
